--- a/multimedija.html
+++ b/multimedija.html
@@ -48,8 +48,8 @@
 <!--13. Navesti podrucije primene multimedije  -->
 
     U oblasti poslovanja je vrlo efikasno sredstvo za prezentaciju proizvoda.
-    U oblasni elektronskog obrazovanja, reklame itd
-    Moze se prezentovati sadrzaj koji je offline (cd, dvd, flesh) i online
+    U oblasti elektronskog obrazovanja, reklame itd..
+    Moze se prezentovati sadrzaj koji je offline (cd, dvd, flesh) i online.
 
 <!-- 14. i 15. Primena multimedija u oblasti poslovanja -->
 
